service/tests/schemas/snapshots/roles/assign_permission_validation_rejects_zero_permission_id@roles.snap
---
source: tests/schemas/roles.rs
expression: result
---
Err(
    "Validation error: {\"permission_id\":\"Permission ID must be a positive integer\"}",
)
