service/tests/schemas/snapshots/roles/assign_role_validation_rejects_negative_params@roles.snap
---
source: tests/schemas/roles.rs
expression: result
---
Err(
    "Validation error: {\"role_id\":\"Role ID must be a positive integer\",\"user_id\":\"User ID must be a positive integer\"}",
)
