service/tests/schemas/snapshots/roles/assign_role_validation_rejects_zero_role_id@roles.snap
---
source: tests/schemas/roles.rs
expression: result
---
Err(
    "Validation error: {\"role_id\":\"Role ID must be a positive integer\"}",
)
