service/tests/schemas/snapshots/roles/assign_role_validation_rejects_zero_user_id@roles.snap
---
source: tests/schemas/roles.rs
expression: result
---
Err(
    "Validation error: {\"user_id\":\"User ID must be a positive integer\"}",
)
