service/tests/schemas/snapshots/roles/new_role_validation_rejects_empty_name@roles.snap
---
source: tests/schemas/roles.rs
assertion_line: 143
expression: result
---
Err(
    "Validation error: {\"name\":\"Name is required\"}",
)
