service/tests/schemas/snapshots/roles/new_role_validation_rejects_long_description@roles.snap
---
source: tests/schemas/roles.rs
assertion_line: 143
expression: result
---
Err(
    "Validation error: {\"description\":\"Description must be under 256 characters\"}",
)
