service/tests/schemas/snapshots/roles/new_role_validation_rejects_name_with_special_chars@roles.snap
---
source: tests/schemas/roles.rs
assertion_line: 143
expression: result
---
Err(
    "Validation error: {\"name\":\"Only letters, numbers and underscores can be used.\"}",
)
