service/tests/schemas/snapshots/roles/update_role_validation_rejects_long_description@roles.snap
---
source: tests/schemas/roles.rs
assertion_line: 167
expression: result
---
Err(
    "Validation error: {\"description\":\"Description must be under 256 characters\"}",
)
